--- a/NLP_tutorial_1.ipynb
+++ b/NLP_tutorial_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOu6x/vZaCniwk9y7vLfzzM",
+      "authorship_tag": "ABX9TyM2tDB71JegcUBexmft/5GI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4265,7 +4265,7 @@
       "metadata": {
         "id": "eYzpXP3wJprw"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -4298,6 +4298,29 @@
           },
           "metadata": {},
           "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"check\")"
+      ],
+      "metadata": {
+        "id": "rjdiAIOJJGNk",
+        "outputId": "0faf5ced-4029-4087-b753-64208e827705",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "check\n"
+          ]
         }
       ]
     }
