--- a/data generation/VAE_implementation.ipynb
+++ b/data generation/VAE_implementation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfxSD87yHLflRj30eyMVHj",
+      "authorship_tag": "ABX9TyOVVfyiuKzjTx1/1p5YGRMP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,41 +37,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {
         "id": "6ADVRv2KOwSK",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "080c5b82-46c1-4de7-d42b-fdaf85f801ef"
+        "outputId": "068616a7-707a-417c-9bde-33aece963b3a"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(array([[ 9.56026431e-01,  1.11353588e+00,  1.16329341e+00, ...,\n",
-              "         -4.60752997e-01, -9.58555629e-01, -2.24053180e+00],\n",
-              "        [ 8.36867260e-01, -1.14065178e+00,  7.12763695e-02, ...,\n",
-              "         -1.12269217e+00,  2.56194465e-01, -2.18001063e+00],\n",
-              "        [-3.95924240e-01, -5.00736531e-01,  2.87249774e+00, ...,\n",
-              "          1.27538025e+00, -8.89485495e-01, -3.54438604e+00],\n",
+              "(array([[ 3.04568832,  1.06022032,  2.98452842, ...,  2.25459163,\n",
+              "          0.37490371,  0.11365388],\n",
+              "        [ 0.11126699, -1.29623538,  2.3733792 , ...,  0.09795778,\n",
+              "          7.44095509, -1.7163683 ],\n",
+              "        [ 0.28047596,  1.80873656, -0.70817941, ..., -1.68074201,\n",
+              "         -0.05288464, -0.18364771],\n",
               "        ...,\n",
-              "        [ 1.22518968e+00,  4.92629879e-02, -1.52668251e+00, ...,\n",
-              "          3.52499337e-01,  1.12419374e-01, -2.50525757e-01],\n",
-              "        [ 6.68530916e-02,  2.06905546e+00, -2.21178357e+00, ...,\n",
-              "         -1.18523539e+00,  8.72286081e-01,  1.35183616e+00],\n",
-              "        [ 3.52605393e-03, -2.81841432e-01, -2.98360150e+00, ...,\n",
-              "         -6.72803790e-01,  2.01940780e-01, -4.62577108e-02]]),\n",
-              " array([3, 0, 0, 1, 0, 3, 1, 0, 0, 3, 2, 0, 0, 2, 2, 1, 0, 0, 3, 0, 1, 3,\n",
-              "        1, 3, 2, 3, 2, 2, 1, 3, 2, 2, 0, 1, 1, 3, 3, 0, 0, 2, 2, 2, 1, 2,\n",
-              "        0, 2, 3, 0, 2, 3, 3, 1, 2, 3, 2, 2, 1, 2, 2, 3, 3, 2, 0, 1, 1, 0,\n",
-              "        3, 1, 3, 1, 3, 0, 1, 1, 1, 3, 2, 3, 2, 1, 0, 2, 3, 3, 1, 1, 0, 1,\n",
-              "        1, 2, 1, 1, 3, 1, 0, 0, 0, 0, 2, 3]))"
+              "        [-1.15112226,  1.35532487, -0.34450707, ..., -1.1505098 ,\n",
+              "         -0.1172273 , -1.39551933],\n",
+              "        [-3.96100661,  1.86026363, -1.33405745, ..., -3.7178547 ,\n",
+              "          3.74130245, -0.51571354],\n",
+              "        [ 2.23278225,  3.0583209 , -1.55052425, ...,  1.10930034,\n",
+              "         -3.19958255,  0.50592546]]),\n",
+              " array([3, 0, 3, 2, 3, 0, 1, 2, 2, 3, 2, 3, 0, 0, 2, 0, 2, 3, 1, 2, 1, 2,\n",
+              "        0, 0, 1, 2, 2, 3, 2, 3, 1, 2, 1, 3, 3, 0, 0, 3, 0, 2, 3, 1, 0, 2,\n",
+              "        3, 3, 0, 1, 0, 3, 1, 0, 1, 2, 1, 2, 0, 3, 0, 2, 0, 1, 3, 0, 1, 3,\n",
+              "        0, 1, 1, 1, 0, 0, 2, 1, 1, 1, 3, 3, 2, 3, 1, 2, 0, 1, 1, 2, 1, 0,\n",
+              "        3, 1, 0, 3, 2, 0, 3, 2, 2, 3, 2, 1]))"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 1
         }
       ],
       "source": [
@@ -101,7 +101,7 @@
         "id": "racZZffF1L1l",
         "outputId": "6b7a5f76-d168-48e8-8530-266dc85e553f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "oU-Q7vzp3Zk6"
       },
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -171,36 +171,18 @@
         "\n",
         "sampling = Sampling()([latent_mean, latent_var])\n",
         "\n",
-        "encoder = tf.keras.models.Model(inputs=inputs, outputs=sampling, name=\"encoder\")\n",
+        "encoder = tf.keras.Model(inputs=inputs, outputs=[latent_mean, latent_var, sampling], name=\"encoder\")\n",
         "\n",
-        "decoder_input = encoder(inputs)\n",
-        "x = Dense(32, activation=\"relu\")(decoder_input)\n",
-        "x = Dense(64, activation=\"relu\")(x)\n",
-        "outputs = Dense(sample_dim, \"tanh\")(x)\n",
-        "\n",
-        "decoder = tf.keras.models.Model(inputs=decoder_input, outputs=outputs, name=\"decoder\")\n",
-        "\n",
-        "vae = tf.keras.models.Model(inputs=inputs, outputs=outputs, name=\"VAE\")"
-      ],
-      "metadata": {
-        "id": "TG6GdrOV31zy"
-      },
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "encoder.summary()"
       ],
       "metadata": {
+        "id": "H8BgRLSiUmN8",
+        "outputId": "5ada1011-9e10-4292-d2f2-084c3437fc0a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "1Agj7O-O6L2E",
-        "outputId": "a1b77d3b-91e1-49cb-c9aa-4f30a9d6136d"
+        }
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,16 +217,23 @@
     {
       "cell_type": "code",
       "source": [
+        "decoder_input = Input(shape=(latent_dim,))\n",
+        "x = Dense(32, activation=\"relu\")(decoder_input)\n",
+        "x = Dense(64, activation=\"relu\")(x)\n",
+        "outputs = Dense(sample_dim, \"tanh\")(x)\n",
+        "\n",
+        "decoder = tf.keras.models.Model(inputs=decoder_input, outputs=outputs, name=\"decoder\")\n",
+        "\n",
         "decoder.summary()"
       ],
       "metadata": {
+        "id": "TG6GdrOV31zy",
+        "outputId": "cdf96f04-8d4e-4fc4-fad5-b7ab843ba764",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "02Rhunqe6O_g",
-        "outputId": "eedf1206-34a2-4ab8-aa9c-d066849ba16f"
+        }
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,44 +262,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "vae.summary()"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_vSFuZt36RO-",
-        "outputId": "f936fc8b-f72c-4f34-cb2c-3be22a85732c"
+        "id": "MYFRPJV1VJXM"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"VAE\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " input_1 (InputLayer)        [(None, 20)]              0         \n",
-            "                                                                 \n",
-            " encoder (Functional)        (None, 10)                4084      \n",
-            "                                                                 \n",
-            " dense_4 (Dense)             (None, 32)                352       \n",
-            "                                                                 \n",
-            " dense_5 (Dense)             (None, 64)                2112      \n",
-            "                                                                 \n",
-            " dense_6 (Dense)             (None, 20)                1300      \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 7,848\n",
-            "Trainable params: 7,848\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -326,7 +283,7 @@
         "id": "LDSUEzzj6iTf",
         "outputId": "b27ee704-6fec-44b1-afd1-5c2364f06e36"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
